Started using references in RStudio

--- a/slides/index.html
+++ b/slides/index.html
@@ -28,6 +28,25 @@
       margin: 0 0.8em 0.2em -1.6em;
       vertical-align: middle;
     }
+    div.csl-bib-body { }
+    div.csl-entry {
+      clear: both;
+    }
+    .hanging div.csl-entry {
+      margin-left:2em;
+      text-indent:-2em;
+    }
+    div.csl-left-margin {
+      min-width:2em;
+      float:left;
+    }
+    div.csl-right-inline {
+      margin-left:2em;
+      padding-left:1em;
+    }
+    div.csl-indent {
+      margin-left: 2em;
+    }
   </style>
   <link rel="stylesheet" href="index_files/libs/revealjs/dist/theme/quarto.css" id="theme">
   <link href="index_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
@@ -341,7 +360,8 @@
 
 <section id="r-and-docker" class="title-slide slide level1 center">
 <h1>R and Docker</h1>
-
+<p>How is docker used with R?</p>
+<p><span class="citation" data-cites="marwick2018">(<a href="#/references" role="doc-biblioref" onclick="">Marwick, Boettiger, and Mullen 2018</a>)</span></p>
 </section>
 
 <section id="what-is-docker" class="title-slide slide level1 center">
@@ -351,8 +371,18 @@
 
 <section id="how-do-i-do-this" class="title-slide slide level1 center">
 <h1>How do I do this?</h1>
+
+</section>
+
+<section id="references" class="title-slide slide level1 smaller scrollable">
+<h1>References</h1>
 <div class="footer footer-default">
 <p>https://jamestripp.github.io/WRUG-RandDocker/</p>
+</div>
+<div id="refs" class="references csl-bib-body hanging-indent" role="doc-bibliography">
+<div id="ref-marwick2018" class="csl-entry" role="doc-biblioentry">
+Marwick, Ben, Carl Boettiger, and Lincoln Mullen. 2018. <span>“Packaging Data Analytical Work Reproducibly Using r (and Friends).”</span> <em>The American Statistician</em> 72 (1): 80–88. <a href="https://doi.org/10.1080/00031305.2017.1375986">https://doi.org/10.1080/00031305.2017.1375986</a>.
+</div>
 </div>
 </section>
     </div>
