--- a/slides/index.html
+++ b/slides/index.html
@@ -520,27 +520,27 @@
 <section id="what" class="slide level2">
 <h2>What?</h2>
 
-<img data-src="images/ddocker6.svg" class="r-stretch"></section>
+<img data-src="images/d6.png" class="r-stretch"></section>
 <section id="what-1" class="slide level2">
 <h2>What?</h2>
 
-<img data-src="images/ddocker5.svg" class="r-stretch"></section>
+<img data-src="images/d5.png" class="r-stretch"></section>
 <section id="what-2" class="slide level2">
 <h2>What?</h2>
 
-<img data-src="images/ddocker4.svg" class="r-stretch"></section>
+<img data-src="images/d4.png" class="r-stretch"></section>
 <section id="what-3" class="slide level2">
 <h2>What?</h2>
 
-<img data-src="images/ddocker3.svg" class="r-stretch"></section>
+<img data-src="images/d3.png" class="r-stretch"></section>
 <section id="what-4" class="slide level2">
 <h2>What?</h2>
 
-<img data-src="images/ddocker2.svg" class="r-stretch"></section>
+<img data-src="images/d2.png" class="r-stretch"></section>
 <section id="what-5" class="slide level2">
 <h2>What?</h2>
 
-<img data-src="images/ddocker1.svg" class="r-stretch"></section>
+<img data-src="images/d1.png" class="r-stretch"></section>
 <section id="r-images-on-dockerhub" class="slide level2">
 <h2>R images on DockerHub</h2>
 <div class="fragment">
